--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,17 +14,15 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@v2
 
-    - name: Install docker-compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
+    - name: Build Docker images
+      run: docker compose -f docker-compose.yaml -f docker-compose.test.yaml build
 
-    - name: Run unit and integration tests with docker-compose
-      run: |
-        docker-compose -f docker-compose.yaml -f docker-compose.test.yaml up --exit-code-from test
+    - name: Run unit and integration tests with docker compose
+      run: docker compose -f docker-compose.yaml -f docker-compose.test.yaml up --exit-code-from test
 
     - name: Clean up
       if: always()
-      run: docker-compose -f docker-compose.yaml -f docker-compose.test.yaml down -v
+      run: docker compose -f docker-compose.yaml -f docker-compose.test.yaml down -v
+      
