--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       run: docker compose -f docker-compose.yaml -f docker-compose.test.yaml build
 
     - name: Run unit and integration tests with docker compose
-      run: docker compose -f docker-compose.yaml -f docker-compose.test.yaml up --exit-code-from test
+      run: docker-compose -f docker-compose.test.yaml up --build --abort-on-container-exit --exit-code-from test
 
     - name: Clean up
       if: always()
